--- a/helpers/Dockerfile
+++ b/helpers/Dockerfile
@@ -1,4 +1,3 @@
-# Step 1: Build the application
 FROM node:20.10 AS builder
 WORKDIR /app
 COPY package*.json ./
@@ -6,13 +5,9 @@ RUN npm install
 COPY . .
 RUN npm run build
 
-# Step 2: Set up the production environment
-FROM nginx:stable-alpine
-COPY --from=builder /app/dist /usr/share/nginx/html
-COPY helpers/entrypoint.sh /docker-entrypoint.d/entrypoint.sh
-RUN chmod +x /docker-entrypoint.d/entrypoint.sh
 
-COPY helpers/nginx.conf /etc/nginx/conf.d/default.conf
+FROM caddy:2.4.6
+COPY --from=builder /app/dist /app/dist
+COPY helpers/Caddyfile /etc/caddy/Caddyfile
 
-EXPOSE 8080
-CMD ["nginx", "-g", "daemon off;"]
+EXPOSE 8081
