sync delete flow

--- a/package.json
+++ b/package.json
@@ -10,20 +10,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mantine/core": "^7.1.7",
-    "@mantine/dates": "^7.1.7",
-    "@mantine/dropzone": "^7.1.7",
-    "@mantine/ds": "^7.1.7",
-    "@mantine/form": "^7.1.7",
-    "@mantine/hooks": "^7.1.7",
-    "@mantine/modals": "^7.1.7",
-    "@mantine/notifications": "^7.1.7",
-    "@mantine/nprogress": "^7.1.7",
+    "@mantine/carousel": "^7.3.0",
+    "@mantine/code-highlight": "^7.3.0",
+    "@mantine/core": "^7.3.0",
+    "@mantine/dates": "^7.3.0",
+    "@mantine/dropzone": "^7.3.0",
+    "@mantine/form": "^7.3.0",
+    "@mantine/hooks": "^7.3.0",
+    "@mantine/modals": "^7.3.0",
+    "@mantine/notifications": "^7.3.0",
+    "@mantine/nprogress": "^7.3.0",
+    "@mantine/spotlight": "^7.3.0",
+    "@mantine/tiptap": "^7.3.0",
     "@react-three/drei": "^9.88.13",
     "@react-three/fiber": "^8.15.11",
+    "@tabler/icons-react": "^2.42.0",
+    "@tiptap/extension-link": "^2.1.13",
+    "@tiptap/react": "^2.1.13",
+    "@tiptap/starter-kit": "^2.1.13",
     "axios": "^1.6.0",
     "axios-hooks": "^5.0.1",
     "dayjs": "^1.11.10",
+    "embla-carousel-react": "^7.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
@@ -38,8 +46,8 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "postcss": "^8.4.31",
-    "postcss-preset-mantine": "^1.9.1",
+    "postcss": "^8.4.32",
+    "postcss-preset-mantine": "^1.11.1",
     "postcss-simple-vars": "^7.0.1",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
