--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "^1.6.0",
     "axios-hooks": "^5.0.1",
     "dayjs": "^1.11.10",
+    "dompurify": "^3.0.8",
     "embla-carousel-react": "^7.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
