--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "axios-hooks": "^5.0.1",
     "dayjs": "^1.11.10",
     "embla-carousel-react": "^7.1.0",
+    "mdi-react": "^9.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-grid-layout": "^1.4.4",
     "react-modal-image": "^2.6.0",
     "react-router-dom": "^6.18.0",
+    "react-sse-hooks": "^1.0.5",
     "three": "^0.158.0"
   },
   "devDependencies": {
