--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "mdi-react": "^9.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-grid-layout": "^1.4.4",
+    "react-grid-layout": "1.3.4",
     "react-modal-image": "^2.6.0",
     "react-router-dom": "^6.18.0",
     "reconnecting-eventsource": "^1.6.2",
